--- a/notes/index.html
+++ b/notes/index.html
@@ -5,7 +5,7 @@ redirect_from: "/blogs"
 nav_item: note
 nav_item_writing: all
 header_title: Notes
-header_quote: save for the rainny day
+header_quote: save for a rainny day
 include_header: header-h1.html
 include_comments:
   count: true
