--- a/research/index.html
+++ b/research/index.html
@@ -3,7 +3,7 @@ layout: default
 title: "Hai-Nguyen Nguyen: Research"
 redirect_from: "/talks"
 header_title: Aerial Robotics
-header_quote: Enable aerial vehicles to physically interact with the environment
+header_quote: to control flying robots for physical interaction
 include_header: header-h1.html
 nav_item: research
 ---
