--- a/index.html
+++ b/index.html
@@ -6,4 +6,37 @@ include_header: home_header.html
 nav_item: home
 ---
 
-{% include about.html %}
+<div class="clearfix mxn2">
+    <div class="col sm-col-9 px2">
+      <h3 class="mb2">About me</h3>
+  
+    <p align="justify">
+      My name is <u>Ha</u>i-<u>N</u>guyen <u>N</u>guyen. I am also known by my initials as Hann, which is <a href="https://en.wikipedia.org/wiki/Courtesy_name"> a writen name</a>  in Vietnamese culture. My family name, "Nguyen," is pronounced "Wien."
+    </p>
+  
+    <p align="justify">
+      Since July 2021, I have been a Contract Research Scientist at <a href="https://www.laas.fr/public/en">LAAS-CNRS</a>, France, working together with <a href="https://homepages.laas.fr/simon/HomePage/Home.html"> Dr. Simon Laxcroix</a>.
+    </p> 
+    <p align="justify">
+      In February 2018, I earned my PhD. in Mechanical and Aerospace Engineering in February 2018 from <a href="https://en.snu.ac.kr/index.html">Seoul National University</a> in Korea, where my academic advisor was <a href="https://www.inrol.snu.ac.kr/dongjun-lee">Prof. Dongjun Lee</a>. From 2018 to 2020, I was a Research Associate at Aerial Robotics Lab at <a href="https://www.imperial.ac.uk/">Imperial College London</a>, working with <a href="http://www.imperial.ac.uk/people/m.kovac">Prof. Mirko Kovac</a>. I also spent one year (2020-2021) developing autonomous vehicles for inventory applications with <a href="https://vimaan.ai/">Vimaan Robotics, Inc.</a>, in California, USA (remotely due to COVID-19 and visa delay).
+    </p>
+    
+    <p align="justify">
+      My research is in the field of control theory and autonomous systems. My current focus is on empowering aerial robots with advanced manipulation capabilities with the emphasis on robustness and dexterity.
+    </p>
+  
+    </div>
+    <div class="col sm-col-3 px2">
+      <h3 class="mb2">Contact</h3>
+      <div class="clearfix">
+        {% for external_url_hash in site.contact_urls %}
+          {% assign external_url = external_url_hash[1] %}
+          <a href="{{ external_url.url }}" target="_blank" class="col dark-gray width-120">
+            <i class="fa fa-fw fa-lg fa-{{ external_url.icon }}"></i>
+            <span class="h6 header-font">{{ external_url.label }}</span>
+          </a>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+  
