--- a/index.html
+++ b/index.html
@@ -8,24 +8,37 @@ nav_item: home
 
 <div class="clearfix mxn2">
     <div class="col sm-col-9 px2">
-      <h3 class="mb2">About me</h3>
-  
+
+      <h3 class="mb2">Open PhD positions</h3>
     <p align="justify">
-      My name is <u>Ha</u>i-<u>N</u>guyen <u>N</u>guyen. I am also known by my initials as Hann, which is <a href="https://en.wikipedia.org/wiki/Courtesy_name"> a writen name</a>  in Vietnamese culture. My family name, "Nguyen," is pronounced "Wien."
-    </p>
-  
-    <p align="justify">
-      Since July 2021, I have been a Contract Research Scientist at <a href="https://www.laas.fr/public/en">LAAS-CNRS</a>, France, working together with <a href="https://homepages.laas.fr/simon/HomePage/Home.html"> Dr. Simon Laxcroix</a>.
-    </p> 
-    <p align="justify">
-      In February 2018, I earned my PhD. in Mechanical and Aerospace Engineering in February 2018 from <a href="https://en.snu.ac.kr/index.html">Seoul National University</a> in Korea, where my academic advisor was <a href="https://www.inrol.snu.ac.kr/dongjun-lee">Prof. Dongjun Lee</a>. From 2018 to 2020, I was a Research Associate at Aerial Robotics Lab at <a href="https://www.imperial.ac.uk/">Imperial College London</a>, working with <a href="http://www.imperial.ac.uk/people/m.kovac">Prof. Mirko Kovac</a>. I also spent one year (2020-2021) developing autonomous vehicles for inventory applications with <a href="https://vimaan.ai/">Vimaan Robotics, Inc.</a>, in California, USA (remotely due to COVID-19 and visa delay).
+      <a href="{{ site.url }}/assets/doc/RMIT_PhD_topic_1_autonomy.pdf">Advanced Autonomy for Aerial Robots in Ecological and Agricultural Environments.</a>
     </p>
     
     <p align="justify">
-      My research is in the field of control theory and autonomous systems. My current focus is on empowering aerial robots with advanced manipulation capabilities with the emphasis on robustness and dexterity.
+      <a href="{{ site.url }}/assets/doc/RMIT_PhD_topic_2_manipulation.pdf">Physically Capable Aerial Robots for Environmental and Infrastructure Applications.</a>
     </p>
+
+    <h3 class="mb2">Bio</h3>
+  
+    <p align="justify">
+      Dr. <u>Ha</u>i-<u>N</u>guyen <u>N</u>guyen, also known by his initials <a href="https://en.wikipedia.org/wiki/Courtesy_name">HANN</a>, is a Lecturer in Robotics and Mechatronics at <a href="https://www.rmit.edu.vn/about-us/who-we-are/our-commitments/vietnam-country-commitment">RMIT Vietnam</a>. He holds a Ph.D. in Mechanical and Aerospace Engineering from <a href="https://en.snu.ac.kr/index.html">Seoul National University</a>, Korea. His research focuses on robotics, with a particular emphasis on drone technologies.
+    </p> 
+
+    <p align="justify">
+      Dr. Nguyen’s experience spans both research-focus institutions and deep-tech startups. He has held various positions at major research institutes, including <a href="https://www.imperial.ac.uk/">Imperial College London</a> (UK), <a href="https://www.laas.fr/public/en">LAAS-CNRS</a> (France), and <a href="https://en.snu.ac.kr/index.html">Seoul National University</a> (Korea). He has also ventured beyond academia, spending a year working at a robotics startup in California, U.S. (remotely due to the COVID-19).
+    </p>
+
+    <p align="justify">
+      His work has been published in leading robotics venues, including CORE A/A* conferences (IROS, ICRA) and Scimago Q1 journals (RAL, TRO, TMech, Automatica). Actively engaged in the robotics community, he has peer-reviewed and edited over 100 robotics papers. Since 2023, he has served as an Associate Editor for <a href="https://portal.core.edu.au/conf-ranks/2051/">ICRA</a>, a CORE A* conference in robotics.
+    </p>
+
+  
   
     </div>
+
+  
+
+
     <div class="col sm-col-3 px2">
       <h3 class="mb2">Contact</h3>
       <div class="clearfix">
