fix: http to https

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         His work has been published in leading robotics venues, including CORE A/A* conferences (IROS, ICRA) and Scimago Q1 journals (RAL, TRO, TMech, Automatica). Actively engaged in the robotics community, he has peer-reviewed and edited over 100 robotics papers. Since 2023, he has served as an Associate Editor for ICRA, a CORE A* conference in robotics.
                     </p>
                     <div class="mt-8">
-                        <a href="http://hann.work/assets/doc/HannCV.pdf" class="inline-flex items-center text-blue-800 font-medium hover:text-blue-600">
+                        <a href="https://hann.work/assets/doc/HannCV.pdf" class="inline-flex items-center text-blue-800 font-medium hover:text-blue-600">
                             Download Full CV <i class="fas fa-download ml-2"></i>
                         </a>
                     </div>
@@ -148,7 +148,7 @@
                                 </div>
                                 <span class="bg-green-100 text-green-800 text-xs px-3 py-1 rounded-full">Open</span>
                             </div>
-                            <a href="http://hann.work/assets/doc/RMIT_PhD_topic_1_autonomy.pdf" class="inline-flex items-center text-blue-800 font-medium hover:underline">
+                            <a href="https://hann.work/assets/doc/RMIT_PhD_topic_1_autonomy.pdf" class="inline-flex items-center text-blue-800 font-medium hover:underline">
                                 Apply Now <i class="fas fa-arrow-right ml-2"></i>
                             </a>
                         </div>
@@ -162,7 +162,7 @@
                                 </div>
                                 <span class="bg-green-100 text-green-800 text-xs px-3 py-1 rounded-full">Open</span>
                             </div>
-                            <a href="http://hann.work/assets/doc/RMIT_PhD_topic_2_manipulation.pdf" class="inline-flex items-center text-blue-800 font-medium hover:underline">
+                            <a href="https://hann.work/assets/doc/RMIT_PhD_topic_2_manipulation.pdf" class="inline-flex items-center text-blue-800 font-medium hover:underline">
                                 Apply Now <i class="fas fa-arrow-right ml-2"></i>
                             </a>
                         </div>
